2002-08-26  Adam Fedor  <fedor@gnu.org>

	* Model/GMAppKit.m (-initWithModelUnarchiver:): Don't add ourselves
	to the superview if we are the contentView of an NSBox.

2002-08-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m: More documentation.
	* Source/NSWindow.m (-sendEvent:): Remember mouseDown view
	and send mouseUp to this view (not firstResponder).

	* Model/test.m: Fix so it reads in gmodel from command line.

	* Source/GNUmakefile: Correct docs so they are built in
	Documentation/Gui directory
	* Source/GNUmakefile.postamble: Extra rules for building docs.
	* Documentation/Gui: New directory for docs.
	* Documentation/gsdoc: Remove.

2002-08-23 02:39  Alexander Malmberg  <alexander@malmberg.org>

        * Source/NSImage.m (-lockFocusOnRepresentation:): Use a
        compositerect to clear the alpha channel if the background color
        isn't opaque.

2002-08-16  Adam Fedor  <fedor@gnu.org>

	* Source/NSGraphicsContext.m: Define colorspace constants

2002-08-15  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Add NetBSD header/ldflag support (Patch from
	Peter Cooper). Cleanup freebsd support.

	* Headers/gnustep/gui/GSDisplayServer.h: Replace APPKIT_DECLARE
	with APPKIT_EXPORT.
	* Headers/gnustep/gui/NSGraphics.h: Idem.
	* Headers/gnustep/gui/NSGraphicsContext.h: Idem.
	* Headers/gnustep/gui/NSPanel.h: Idem.

Fri Aug  9 12:12:18 2002  Georg Fleischmann <georg@vhf.de>

	* Source/NSWindow.m ([-setFrameFromString:]),
	([-stringWithSavedFrame]): Don't flip coordinates to make it
	compatible with OpenStep.

2002-08-05  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSSplitView.m 
	[NSplitView -setFrame:]:
	  adjust the subviews.
	[NSSplitView -resizeWithOldSuperviewSize:]:
	  send the splitview's old size not the superview's old size to 
	  [NSSplitView -_adjustSubviews:]
	[NSSplitView -displayIfNeededInRectIgnoringOpacity:]
	[NSSplitView -displayRectIgnoringOpacity:]
	  set _never_displayed_before before calling _adjustSubviews.