@@ -3,6 +3,10 @@
 	* Model/GMAppKit.m (-initWithModelUnarchiver:): Don't add ourselves
 	to the superview if we are the contentView of an NSBox.
 
+	* Tools/example.m ([ExampleServices -openURL:userData:error:]): 
+	Get browser from defualts. Use mozilla if non. (Modified patch from
+	Stefan Urbanek).
+
 2002-08-24  Adam Fedor  <fedor@gnu.org>
 
 	* Source/NSGraphicsContext.m: More documentation.
